# nanochat

./: pyproject.toml  speedrun.sh
dev/: LOG.md  runcpu.sh
nanochat/: MOE_README.md  adamw.py  checkpoint_manager.py  dataloader.py  engine.py  flash_attention.py  gpt.py  moe.py  ui.html
runs/: autorun.sh  gpu_config_utils.sh  speedrun.sh
scripts/: base_train.py  benchmark_moe.py  chat_rl.py  chat_sft.py  example_moe.py  gpu_config_utils.sh  mid_train.py  moe_benchmark.py
tests/: test_engine.py  test_moe.py
