[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "ipykernel>=7.1.0",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "psutil>=7.1.0",
    "python-dotenv>=1.2.1",
    "regex>=2025.9.1",
    "rustbpe>=0.1.0",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8, rocm6.4 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cuda" },
    { index = "pytorch-cu128", extra = "gpu" },  # gpu is an alias for cuda
    { index = "pytorch-rocm64", extra = "rocm" },
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm64", extra = "rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch>=2.9.1",
]
cuda = [
    "torch>=2.9.1",
]
gpu = [
    "torch>=2.9.1",
]  # gpu is an alias for cuda (backward compatibility)
rocm = [
    "torch>=2.9.1",
    "pytorch-triton-rocm>=3.5.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "megablocks @ git+https://github.com/ROCm/megablocks.git",
]


[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "gpu" },
        { extra = "rocm" },
    ],
]
